Fix font sizes and overlapping texts

--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ nav {
   font-size: 12px;
   line-height: 24px;
   padding-top: 1rem;
-  color: #556e9b;
+  color: #405172;
 }
 
 .popupBtn {
@@ -344,7 +344,7 @@ h1 {
   line-height: 24px;
   letter-spacing: 0;
   text-align: left;
-  color: #556e9b;
+  color: #405172;
 }
 
 .main-section .lc {
@@ -479,7 +479,7 @@ h1 {
   font-weight: 400;
   font-size: 12px;
   line-height: 24px;
-  color: #556e9b;
+  color: #405172;
 }
 
 #popuplang {
